--- a/views/midterm_82/cart2_82.ejs
+++ b/views/midterm_82/cart2_82.ejs
@@ -4,59 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Crown Clothing</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <div class="header">
       <a href="/" class="logo-container">
-        <img src="./assets/crown.svg" />
+        <img src="/assets/crown.svg" />
       </a>
       <div class="options">
         <a href="./overview.html" class="option">Shop</a>
         <a href="/shop" class="option">Contact</a>
         <a href="/logout" class="option">Logout</a>
-        <a href="#" class="option">u123456789</a>
+        <a href="#" class="option"><%= id %></a>
         <div class="cart-icon" onclick="cartToggle()">
-          <img class="shopping-icon" src="./assets/shopping-bag.svg" alt="" />
+          <img class="shopping-icon" src="/assets/shopping-bag.svg" alt="" />
         </div>
         <div class="cart-dropdown">
           <div class="cart-items">
-            <div class="cart-item">
-              <img src="./img/hats/brown-cowboy.png" alt="item" />
-              <div class="item-details">
-                <span class="name">Brown Cowboy</span>
-                <span class="price">1 * $35</span>
+            <% for(let i=0; i<data.length; i++){ %>
+              <div class="cart-item">
+                <img src="<%= data[i].local_url %>" alt="item" />
+                <div class="item-details">
+                  <span class="name"><%= data[i].name %></span>
+                  <span class="price"><%= data[i].amount %> * $<%= data[i].price %></span>
+                </div>
               </div>
-            </div>
-            <div class="cart-item">
-              <img src="./img/jackets/blue-jean-jacket.png" alt="item" />
-              <div class="item-details">
-                <span class="name">Blue Jean Jacket</span>
-                <span class="price">2 * $90</span>
-              </div>
-            </div>
-            <div class="cart-item">
-              <img src="./img/sneakers/adidas-nmd.png" alt="item" />
-              <div class="item-details">
-                <span class="name">Adidas NMD</span>
-                <span class="price">1 * $220</span>
-              </div>
-            </div>
-            <div class="cart-item">
-              <img src="./img/womens/blue-tank.png" alt="item" />
-              <div class="item-details">
-                <span class="name">Blue Tanktop</span>
-                <span class="price">2 * $25</span>
-              </div>
-            </div>
-            <div class="cart-item">
-              <img src="./img/mens/pink-shirt.png" alt="item" />
-              <div class="item-details">
-                <span class="name">Pink T-shirt </span>
-                <span class="price">1 * $25</span>
-              </div>
-            </div>
-            <div class="total">Total: $410</div>
+            <% } %>
+            <div class="total">Total: $<%= total %></div>
           </div>
           <button class="custom-button">GO TO CHECKOUT</button>
         </div>
@@ -66,7 +40,7 @@
     <div class="homepage">
       <div class="directory-menu">
         <div class="menu-item">
-          <img class="background-image" src="./img/homepage/hats.png" alt="" />
+          <img class="background-image" src="/img/homepage/hats.png" alt="" />
           <a href="./hats.html" class="content">
             <h1 class="title">HATS</h1>
             <span class="subtitle">SHOP NOW</span>
@@ -75,7 +49,7 @@
         <div class="menu-item">
           <img
             class="background-image"
-            src="./img/homepage/jackets.png"
+            src="/img/homepage/jackets.png"
             alt=""
           />
           <a href="./jackets.html" class="content">
@@ -86,7 +60,7 @@
         <div class="menu-item">
           <img
             class="background-image"
-            src="./img/homepage/sneakers.png"
+            src="/img/homepage/sneakers.png"
             alt=""
           />
           <a href="./sneakers.html" class="content">
@@ -97,7 +71,7 @@
         <div class="large menu-item">
           <img
             class="background-image"
-            src="./img/homepage/womens.png"
+            src="/img/homepage/womens.png"
             alt=""
           />
           <a href="./womens.html" class="content">
@@ -106,7 +80,7 @@
           </a>
         </div>
         <div class="large menu-item">
-          <img class="background-image" src="./img/homepage/mens.png" alt="" />
+          <img class="background-image" src="/img/homepage/mens.png" alt="" />
           <a href="./mens.html" class="content">
             <h1 class="title">MENS</h1>
             <span class="subtitle">SHOP NOW</span>
